[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"

# Enable some optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (including Bevy!)
[profile.dev.package."*"]
opt-level = 3
